--- a/p10.html
+++ b/p10.html
@@ -35,12 +35,7 @@
         data=[newObj]
         else
         {
-            for(var i=0; i<data.length;i++)
-            {
-                if(newObj.roll<data[i].roll)
-                newObj.roll=data[i].roll
-            }
-            newObj.roll=newObj.roll+1
+            newObj.roll=data[data.length-1].roll+1
             data.push(newObj);
         }
         window.localStorage.setItem('student',JSON.stringify(data));
