localStorage id generate

--- a/p10.html
+++ b/p10.html
@@ -9,10 +9,10 @@
 <body>
     <form align="center">
         <h1>Register Here..</h1>
-        Name : <input type="text" name="name" id="name"><br/>
-        Email : <input type="email" name="email" id="email"><br/>
-        Password : <input type="password" name="pass" id="pass"><br/>
-        Mobile : <input type="number" name="mob" id="mob"><br/><br/>
+        Name : <br/><input type="text" name="name" id="name"><br/>
+        Email : <br/><input type="email" name="email" id="email"><br/>
+        Password : <br/><input type="password" name="pass" id="pass"><br/>
+        Mobile : <br/><input type="number" name="mob" id="mob"><br/><br/>
         <input type="button" onclick="demo()" value="Submit">
     </form>
     <script>
